// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildOrganizationGroupRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zendesk_group:5812638858781",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2022-07-06T18:46:13Z",
            "default": true,
            "deleted": false,
            "description": "",
            "id": 5812638858781,
            "is_public": true,
            "name": "Support",
            "updated_at": "2022-07-06T18:46:13Z",
            "url": "https://creativice.zendesk.com/api/v2/groups/5812638858781.json",
          },
        },
      ],
      "_type": "zendesk_group",
      "createdAt": "2022-07-06T18:46:13Z",
      "createdOn": undefined,
      "deleted": false,
      "description": "",
      "displayName": "Support",
      "id": "5812638858781",
      "name": "Support",
      "updatedAt": "2022-07-06T18:46:13Z",
      "url": "https://creativice.zendesk.com/api/v2/groups/5812638858781.json",
    },
    Object {
      "_class": Array [
        "Organization",
      ],
      "_key": "zendesk_organization:5812638859421",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2022-07-06T18:46:13Z",
            "details": null,
            "domain_names": Array [],
            "external_id": null,
            "group_id": null,
            "id": 5812638859421,
            "name": "Creativice",
            "notes": null,
            "organization_fields": Object {},
            "shared_comments": false,
            "shared_tickets": false,
            "tags": Array [],
            "updated_at": "2022-07-06T18:46:13Z",
            "url": "https://creativice.zendesk.com/api/v2/organizations/5812638859421.json",
          },
        },
      ],
      "_type": "zendesk_organization",
      "createdAt": "2022-07-06T18:46:13Z",
      "createdOn": undefined,
      "details": Array [],
      "displayName": "Creativice",
      "domainNames": Array [],
      "groupId": undefined,
      "id": "5812638859421",
      "name": "Creativice",
      "notes": Array [],
      "sharedComments": false,
      "sharedTickets": false,
      "updatedAt": "2022-07-06T18:46:13Z",
      "url": "https://creativice.zendesk.com/api/v2/organizations/5812638859421.json",
    },
  ],
  "collectedRelationships": Array [],
  "encounteredTypes": Array [
    "zendesk_group",
    "zendesk_organization",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 0,
}
`;

exports[`#fetchOrganizations should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "zendesk_account:creativice",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "multiproduct": true,
            "name": "Creativice",
            "owner_id": 5812690998173,
            "sandbox": false,
            "subdomain": "creativice",
            "time_format": 24,
            "time_zone": "Europe/Belgrade",
            "url": "https://creativice.zendesk.com",
          },
        },
      ],
      "_type": "zendesk_account",
      "accessURL": "https://creativice.zendesk.com",
      "accountId": "creativice",
      "createdOn": undefined,
      "displayName": "Creativice",
      "name": "Creativice",
    },
    Object {
      "_class": Array [
        "Organization",
      ],
      "_key": "zendesk_organization:5812638859421",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2022-07-06T18:46:13Z",
            "details": null,
            "domain_names": Array [],
            "external_id": null,
            "group_id": null,
            "id": 5812638859421,
            "name": "Creativice",
            "notes": null,
            "organization_fields": Object {},
            "shared_comments": false,
            "shared_tickets": false,
            "tags": Array [],
            "updated_at": "2022-07-06T18:46:13Z",
            "url": "https://creativice.zendesk.com/api/v2/organizations/5812638859421.json",
          },
        },
      ],
      "_type": "zendesk_organization",
      "createdAt": "2022-07-06T18:46:13Z",
      "createdOn": undefined,
      "details": Array [],
      "displayName": "Creativice",
      "domainNames": Array [],
      "groupId": undefined,
      "id": "5812638859421",
      "name": "Creativice",
      "notes": Array [],
      "sharedComments": false,
      "sharedTickets": false,
      "updatedAt": "2022-07-06T18:46:13Z",
      "url": "https://creativice.zendesk.com/api/v2/organizations/5812638859421.json",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_account:creativice",
      "_key": "zendesk_account:creativice|has|zendesk_organization:5812638859421",
      "_toEntityKey": "zendesk_organization:5812638859421",
      "_type": "zendesk_account_has_organization",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "zendesk_account",
    "zendesk_organization",
    "zendesk_account_has_organization",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;
